fixed pic overlapping nav on line page view

--- a/app/assets/stylesheets/lines.scss
+++ b/app/assets/stylesheets/lines.scss
@@ -5,6 +5,7 @@
 	width: 100%;
 	height: 100px;
 	background-position: center;
+	margin-top: 64px;
 
 	h3 {
 		position: absolute;
@@ -44,7 +45,7 @@
 				height: 100%;
 				left: 12px;
 				background: #535353;
-			} 
+			}
 			.mark-circle {
 				background: white;
 				width: 10px;
@@ -97,7 +98,7 @@
 .stop-title {
 	.line-tile {
 		display: inline-block;
-	
+
 		&:first-of-type { margin-left: 5px; }
 		.api-id, .line-swatch { font-size: 12px; }
 	}
